# pyt

./: .gitignore  pyproject.toml
src/pytoc/: cli.py  main.py  outline.py
