[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytoc"
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
  "typer",
  "pikepdf",
]

[project.scripts]
pdft = "pytoc.cli:app"

[tool.hatch.version]
path = "src/pytoc/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pytoc tests}"

[tool.coverage.run]
source_pkgs = ["pytoc", "tests"]
branch = true
parallel = true
omit = [
  "src/pytoc/__about__.py",
]

[tool.coverage.paths]
pytoc = ["src/pytoc", "*/pytoc/src/pytoc"]
tests = ["tests", "*/pytoc/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
